Minor bold text tweak

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
    <blockquote>"Life is either a daring adventure or nothing at all!"</blockquote>
    <form action="/action_page.php">
     <fieldset>
-     <legend>Your Details</legend>
+     <legend id="detail">Your Details</legend>
      <label for="fname">First name:</label>
      <input type="text" id="fname" name="fname"><br><br>
      <label for="lname">Last name:</label>
