Changed placeholder text on index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <li>Italy</li>
     </ul>
     
-   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent mattis, eros eget laoreet volutpat, purus risus tincidunt turpis, sit amet congue nisi diam fringilla odio. </p>
+   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Explicabo expedita harum aperiam fugiat, dolor ques exercitationem pariatur deleniti ea, nam optio incidunt minima similique reiciendis omnis sapiente at est mollitia.</p>
 
    <table>
       <thead>  
