--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    <h1 class="intro">Welcome</h1> 
    <blockquote>"Life is either a daring adventure or nothing at all!"</blockquote>
    <p>2020 has come, maybe not with a bang as many of us may have hoped, but the world goes on and such I have deceided to resume my travel next year. 
-    Here are a list of place I have visited.</p>
+    Here are a list of places I have visited.</p>
     <ul>
         <li>Singapore</li>
         <li>France</li>
